Bug 291858 - crash in list layout after undo/redo of assigning header style
Summary: crash in list layout after undo/redo of assigning header style
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
: 292089 292246 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-18 12:21 UTC by T Zachmann
Modified: 2012-03-06 16:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description T Zachmann 2012-01-18 12:21:54 UTC
Version:           unspecified (using Devel) 
OS:                Linux

There is a crash when setting the style "Head 1" and undo/redo the change.

Reproducible: Didn't try

Steps to Reproduce:
Open the Professional Letter template
Type a letter 
Use the style docker to assign the style "Head 1"
Undo/redo the command
->crash

Actual Results:  
crash

Expected Results:  
should not crash
Comment 1 T Zachmann 2012-01-18 12:24:15 UTC
Here is the backtrace I get.

Thread 1 (Thread 0x7f8fb22f57c0 (LWP 14931)):
[KCrash Handler]
#6  0x00007f8fb156ebae in KoList::listContinuedFrom (this=0x0) at /home/tz/develop/kde/git/calligra/libs/kotext/KoList.cpp:235
#7  0x00007f8fab0456ef in ListItemsHelper::recalculateBlock (this=0x7fff76b031f0, block=...) at /home/tz/develop/kde/git/calligra/libs/textlayout/ListItemsHelper.cpp:263
#8  0x00007f8fab01c8d2 in KoTextLayoutArea::layoutBlock (this=0x3d9c930, cursor=0x4257b20) at /home/tz/develop/kde/git/calligra/libs/textlayout/KoTextLayoutArea.cpp:761
#9  0x00007f8fab01bac8 in KoTextLayoutArea::layout (this=0x3d9c930, cursor=0x4257b20) at /home/tz/develop/kde/git/calligra/libs/textlayout/KoTextLayoutArea.cpp:593
#10 0x00007f8fab03cc22 in KoTextLayoutRootArea::layoutRoot (this=0x3d9c930, cursor=0x4257b20) at /home/tz/develop/kde/git/calligra/libs/textlayout/KoTextLayoutRootArea.cpp:63
#11 0x00007f8fab03eebe in KoTextDocumentLayout::doLayout (this=0x24e8350) at /home/tz/develop/kde/git/calligra/libs/textlayout/KoTextDocumentLayout.cpp:623
#12 0x00007f8fab03eaa2 in KoTextDocumentLayout::layout (this=0x24e8350) at /home/tz/develop/kde/git/calligra/libs/textlayout/KoTextDocumentLayout.cpp:572
#13 0x00007f8fab03fc50 in KoTextDocumentLayout::executeScheduledLayout (this=0x24e8350) at /home/tz/develop/kde/git/calligra/libs/textlayout/KoTextDocumentLayout.cpp:763
#14 0x00007f8fab040407 in KoTextDocumentLayout::qt_metacall (this=0x24e8350, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x426dbc0) at /home/ko2/calligra-build/libs/textlayout/KoTextDocumentLayout.moc:89
#15 0x00007f8fac76f49a in QObject::event (this=0x24e8350, e=<value optimized out>) at kernel/qobject.cpp:1226
#16 0x00007f8fad8da9f4 in QApplicationPrivate::notify_helper (this=0x237cc70, receiver=0x24e8350, e=0x41da0f0) at kernel/qapplication.cpp:4462
#17 0x00007f8fad8df3ba in QApplication::notify (this=<value optimized out>, receiver=0x24e8350, e=0x41da0f0) at kernel/qapplication.cpp:4341
#18 0x00007f8fae5fe6c6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#19 0x00007f8fac75b49c in QCoreApplication::notifyInternal (this=0x7fff76b04660, receiver=0x24e8350, event=0x41da0f0) at kernel/qcoreapplication.cpp:731
#20 0x00007f8fac75ec25 in sendEvent (receiver=0x0, event_type=0, data=0x22a3b00) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#21 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x22a3b00) at kernel/qcoreapplication.cpp:1372
#22 0x00007f8fac786253 in sendPostedEvents (s=0x237fdc0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#23 postEventSourceDispatch (s=0x237fdc0) at kernel/qeventdispatcher_glib.cpp:277
#24 0x00007f8fa6d9abcd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007f8fa6d9b3a8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007f8fa6d9b639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f8fac7863ef in QEventDispatcherGlib::processEvents (this=0x22a32e0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#28 0x00007f8fad9844de in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#29 0x00007f8fac75a882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#30 0x00007f8fac75aabc in QEventLoop::exec (this=0x7fff76b04610, flags=...) at kernel/qeventloop.cpp:201
#31 0x00007f8fac75eecb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#32 0x00007f8fb1f27d65 in kdemain (argc=1, argv=0x7fff76b04848) at /home/tz/develop/kde/git/calligra/words/part/main.cpp:43
#33 0x0000000000400906 in main (argc=1, argv=0x7fff76b04848) at /home/ko2/calligra-build/words/part/calligrawords_dummy.cpp:3
Comment 2 Gopalakrishna Bhat 2012-01-20 17:39:33 UTC
Git commit a565c620bf69adc917e093931ba1a5a56b3dffc3 by Gopalakrishna Bhat A.
Committed on 20/01/2012 at 18:19.
Pushed by gopalakrishnabhat into branch 'master'.

Check if the list is actually stored in KoTextDocument before accessing it.

M  +1    -1    libs/kotext/opendocument/KoTextWriter_p.cpp
M  +1    -1    libs/textlayout/ListItemsHelper.cpp

http://commits.kde.org/calligra/a565c620bf69adc917e093931ba1a5a56b3dffc3
Comment 3 Gopalakrishna Bhat 2012-01-24 14:09:25 UTC
*** Bug 292246 has been marked as a duplicate of this bug. ***
Comment 4 Gopalakrishna Bhat 2012-03-06 16:58:21 UTC
*** Bug 292089 has been marked as a duplicate of this bug. ***