Check if the list is actually stored in KoTextDocument before accessing it.

BUG: 291858